<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout style="@style/Messenger.Wrapper">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            style="@style/Messenger.AppBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/app_background">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/navigation_bt"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_back_navigation" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Messenger.Character.H3.Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barcode_my_qr_code"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/qr_code_img"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:background="@drawable/holder_rect"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/read_qr_code"
                    style="@style/Messenger.Button"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingStart="4dp"
                    android:paddingLeft="4dp"
                    android:paddingEnd="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/barcode_scan_qr_code" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_qr_code"
                    style="@style/Messenger.Button"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingStart="4dp"
                    android:paddingLeft="4dp"
                    android:paddingEnd="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/barcode_save_qr_code" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>