<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <com.hahalolo.qrcode.camera.CameraSourcePreview
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.hahalolo.qrcode.camera.GraphicOverlay
                android:id="@+id/camera_preview_graphic_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <FrameLayout
                android:id="@+id/static_overlay_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent">

                <ProgressBar
                    android:id="@+id/search_progress_bar"
                    android:layout_width="@dimen/search_progress_bar_size"
                    android:layout_height="@dimen/search_progress_bar_size"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    android:indeterminateTintMode="src_in"
                    android:visibility="gone" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bottom_prompt_chip"
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="@dimen/bottom_prompt_chip_margin_bottom"
                    android:text="@string/prompt_point_at_a_barcode"
                    android:checkable="false"
                    android:clickable="false"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:textSize="@dimen/halo_body2_text_size"
                    android:visibility="gone"
                    app:chipCornerRadius="@dimen/bottom_prompt_chip_corner_radius"
                    app:chipSurfaceColor="@color/chip_surface_color_dark"
                    app:closeIconVisible="false" />
            </FrameLayout>

        </com.hahalolo.qrcode.camera.CameraSourcePreview>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_action_bar_height"
            android:layout_gravity="top"
            android:background="@drawable/qr_code_top_action_bar_scrim"
            android:paddingStart="@dimen/top_action_bar_padding_horizontal"
            android:paddingEnd="@dimen/top_action_bar_padding_horizontal">

            <ImageView
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="@dimen/top_action_button_padding"
                app:srcCompat="@drawable/ic_close_white_24" />

            <ImageView
                android:id="@+id/flash_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/top_action_button_padding"
                app:srcCompat="@drawable/camera_flash" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/my_qr_code"
                style="@style/Messenger.Button"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/barcode_my_qr_code" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/get_qr_code"
                style="@style/Messenger.Button"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:layout_width="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/barcode_scan_image_available" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>